--- a/proyecto/login.html
+++ b/proyecto/login.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empresa_prueba</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
+
 <body style="background-image: url(img/registerpic.jpg); background-repeat: no-repeat; background-size: cover;">
     <form action="validar.php" method="post">
         <div class="login">
-            <div class="container">                  
-                        <div class="first">
-                            <h1 style="color:white;" >nombre de aplicacion</h1>
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="floatingInput" placeholder="Usuario" required>
-                                <label for="floatingInput">Usuario</label>
-                              </div>
-                              <div class="form-floating">
-                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
-                                <label for="floatingPassword">Password</label>
-                              </div>
-                            <input type="submit" value="Iniciar sesion">
-                            <p style="color: white;"> <br> ¿No tienes cuenta?</p> <a  href="/register.html" >Regístrate</a>
-                        </div>
+            <div class="container">
+                <div class="first">
+                    <h1 style="color:white;">nombre</h1>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="Usuario" required>
+                        <label for="floatingInput">Usuario</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
+                            required>
+                        <label for="floatingPassword">Password</label>
+                    </div>
+                    <input type="submit" value="Iniciar sesion">
+                    <p style="color: white;"> <br> ¿No tienes cuenta?</p> <a href="/register.html">Regístrate</a>
+                </div>
             </div>
         </div>
     </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
