--- a/proyecto/login.html
+++ b/proyecto/login.html
@@ -16,7 +16,7 @@
         <div class="login">
             <div class="container">
                 <div class="first">
-                    <h1 style="color:white;">Alex</h1>
+                    <h1 style="color:white;">ELIANA</h1>
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="floatingInput" placeholder="Usuario" required>
                         <label for="floatingInput">Usuario</label>
